Consistent indexing of TTrees
- With the new tests, found that calibrate_tree was processing events multiple times. The reason was a mixing of indices (starting from 0) and event numbers (starting from 1)
- Consistent use of indices in all analysis programs.
- Simpler interface for the progress_printer that does not require the addition of 1.
- Run progress_printer at the end of a loop instead of the beginning. This fits its status message.
- Implement test for the command that splits up a TTree. This helped to fix the original problem.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ configure_file(include/programs/history.hpp.in include/programs/history.hpp)
 configure_file(include/test/sampler.hpp.in include/test/sampler.hpp)
 
 enable_testing()
+add_test(tfile_utilities test_tfile_utilities)
 add_test(sample_test_data sampler --n 100)
 add_test(create_raw_histograms histograms_1d_raw test.root --output test_raw.root)
 add_test(calibrate_test_data calibrate_tree test.root --output test_cal.root --log --block 100)
