Fix build and optional testing
- Move test registration from top-level CMakeLists.txt to source/test/CMakeLists.txt.
- Update include paths for several libraries/executables.
- Include correct header in histograms_2d.
- This was the first time in a while that a complete rebuild was done. Build has probably been broken since the new subdirectories were introduced.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ set(ANALYSIS "analysis_78Kr.hpp" CACHE STRING "Set name of header file in ${CMAK
 add_compile_options(-Wall -Wextra)
 option(BUILD_TESTS "Build unit tests. Default: ON" ON)
 if(BUILD_TESTS)
+    include(CTest)
     add_compile_options(-Wall -Wextra -ftest-coverage --coverage)
     link_libraries(gcov)
 endif(BUILD_TESTS)
@@ -35,10 +36,3 @@ configure_file(include/programs/histograms_1d_raw.hpp.in include/programs/histog
 configure_file(include/programs/histograms_2d.hpp.in include/programs/histograms_2d.hpp)
 configure_file(include/programs/history.hpp.in include/programs/history.hpp)
 configure_file(include/test/sampler.hpp.in include/test/sampler.hpp)
-
-enable_testing()
-add_test(tfile_utilities test_tfile_utilities)
-add_test(sample_test_data sampler --n 100)
-add_test(create_raw_histograms histograms_1d_raw test.root --output test_raw.root)
-add_test(calibrate_test_data calibrate_tree test.root --output test_cal.root --log --block 100)
-add_test(create_histograms histograms_1d test_cal.log --output test_hist.root --log)
