Test output in binary directory.
- Reverts some of the changes of previous commit.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,9 @@ set(ANALYSIS "analysis_78Kr.hpp" CACHE STRING "Set name of header file in ${CMAK
 add_compile_options(-Wall -Wextra)
 option(BUILD_TESTS "Build unit tests. Default: ON" ON)
 if(BUILD_TESTS)
-    include(CTest)
     add_compile_options(-Wall -Wextra -ftest-coverage --coverage)
     link_libraries(gcov)
+    enable_testing()
 endif(BUILD_TESTS)
 
 add_subdirectory(source/analysis)
@@ -26,6 +26,11 @@ add_subdirectory(source/modules)
 add_subdirectory(source/programs)
 if(BUILD_TESTS)
     add_subdirectory(source/test)
+    add_test(NAME tfile_utilities COMMAND test_tfile_utilities)
+    add_test(NAME sample_test_data COMMAND sampler --n 100)
+    add_test(NAME create_raw_histograms COMMAND histograms_1d_raw test.root --output test_raw.root)
+    add_test(NAME calibrate_test_data COMMAND calibrate_tree test.root --output test_cal.root --log --block 100)
+    add_test(NAME create_histograms COMMAND histograms_1d test_cal.log --output test_hist.root --log)
 endif(BUILD_TESTS)
 
 configure_file(include/io/split_tree.hpp.in include/io/split_tree.hpp)
