histograms_2d in ctest, '--list' for all programs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,8 @@ if(BUILD_TESTS)
     add_test(NAME sample_test_data COMMAND sampler --n 100)
     add_test(NAME create_raw_histograms COMMAND histograms_1d_raw test.root --output test_raw.root)
     add_test(NAME calibrate_test_data COMMAND calibrate_tree test.root --output test_cal.root --log --block 100)
-    add_test(NAME create_histograms COMMAND histograms_1d test_cal.log --output test_hist.root --log)
+    add_test(NAME create_1d_histograms COMMAND histograms_1d test_cal.log --output test_1d.root --list)
+    add_test(NAME create_2d_histograms COMMAND histograms_2d test_cal.log --output test_2d.root --list)
 endif(BUILD_TESTS)
 
 configure_file(include/io/split_tree.hpp.in include/io/split_tree.hpp)
