Test more programs, update split_tree program
- Testing split_tree, energy_vs_time, history, and histograms_1d_text.
- split_tree can write a log file now. Since there are several programs that can do this now, defined the function in tfile_utilities.
- Update command-line parsing in split_tree.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,11 +27,15 @@ add_subdirectory(source/programs)
 if(BUILD_TESTS)
     add_subdirectory(source/test)
     add_test(NAME tfile_utilities COMMAND test_tfile_utilities)
-    add_test(NAME sample_test_data COMMAND sampler --n 100)
-    add_test(NAME create_raw_histograms COMMAND histograms_1d_raw test.root --output test_raw.root)
+    add_test(NAME sample_test_data COMMAND sampler --output test.root --n 100)
+    add_test(NAME split_test_data COMMAND split_tree test.root --output test_part --n 4 --log)
+    add_test(NAME create_raw_histograms COMMAND histograms_1d_raw test_part.log --output test_raw.root --list)
     add_test(NAME calibrate_test_data COMMAND calibrate_tree test.root --output test_cal.root --log --block 100)
     add_test(NAME create_1d_histograms COMMAND histograms_1d test_cal.log --output test_1d.root --list)
     add_test(NAME create_2d_histograms COMMAND histograms_2d test_cal.log --output test_2d.root --list)
+    add_test(NAME time_calibration COMMAND energy_vs_time test_cal.log --output test_et.root --rebin_energy 32 --list)
+    add_test(NAME history COMMAND history test_cal.log --output test_history.root --list)
+    add_test(NAME text_files COMMAND histograms_1d_text test_1d.root)
 endif(BUILD_TESTS)
 
 configure_file(include/io/split_tree.hpp.in include/io/split_tree.hpp)
