--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ if(BUILD_TESTS)
     add_test(NAME sample_test_data COMMAND sampler --output test.root --n 100)
     add_test(NAME split_test_data COMMAND split_tree test.root --output test_part --n 4 --log)
     add_test(NAME create_raw_histograms COMMAND histograms_1d_raw test_part.log --output test_raw.root --list)
-    add_test(NAME calibrate_test_data COMMAND calibrate_tree test.root --output test_cal.root --log --block 100)
+    add_test(NAME calibrate_test_data COMMAND calibrate_tree test_part.log --output test_cal.root --log --list --block 100)
     add_test(NAME create_1d_histograms COMMAND histograms_1d test_cal.log --output test_1d.root --list)
     add_test(NAME create_2d_histograms COMMAND histograms_2d test_cal.log --output test_2d.root --list)
     add_test(NAME time_calibration COMMAND energy_vs_time test_cal.log --output test_et.root --rebin_energy 32 --list)
