Unify file-name tools
- This makes a helper function in histograms_1d_text obsolete

--- a/source/io/CMakeLists.txt
+++ b/source/io/CMakeLists.txt
@@ -11,7 +11,7 @@ add_library(command_line_parser command_line_parser.cpp)
 target_link_libraries(command_line_parser ${Boost_LIBRARIES} ${ROOT_LIBRARIES})
 
 add_executable(histograms_1d_text histograms_1d_text.cpp)
-target_link_libraries(histograms_1d_text ${Boost_LIBRARIES} command_line_parser ${ROOT_LIBRARIES})
+target_link_libraries(histograms_1d_text ${Boost_LIBRARIES} command_line_parser ${ROOT_LIBRARIES} tfile_utilities)
 
 add_library(progress_printer progress_printer.cpp)
 
