--- a/source/test/CMakeLists.txt
+++ b/source/test/CMakeLists.txt
@@ -10,7 +10,7 @@ target_link_libraries(inverse_calibration ${ROOT_LIBRARIES})
 
 add_executable(sampler sampler.cpp)
 target_include_directories(sampler PUBLIC ${CMAKE_BINARY_DIR}/include/test)
-target_link_libraries(sampler analysis ${Boost_LIBRARIES} counter_detector counter_detector_channel energy_sensitive_detector energy_sensitive_detector_channel inverse_calibration mdpp16 progress_printer ${ROOT_LIBRARIES} v830)
+target_link_libraries(sampler analysis ${Boost_LIBRARIES} counter_detector counter_detector_channel energy_sensitive_detector energy_sensitive_detector_channel inverse_calibration mdpp16 progress_printer ${ROOT_LIBRARIES} sis3316 v830)
 
 add_executable(test_tfile_utilities test_tfile_utilities.cpp)
 target_link_libraries(test_tfile_utilities tfile_utilities)
