Test output file naming, counter, and coincidences
- Simplified output-file generation with a more general function.
- To avoid overwriting its own output, histograms_1d_text has an option to add a user-defined suffix now.
- Add counter module and coincidence matrix to test.
- Remove some code in histograms_1d_text that aborts the program when output files cannot be written. For now, simply let it crash like all other programs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,8 @@ if(BUILD_TESTS)
     add_test(NAME create_2d_histograms COMMAND histograms_2d test_cal.log --output test_2d.root --list)
     add_test(NAME time_calibration COMMAND energy_vs_time test_cal.log --output test_et.root --rebin_energy 32 --list)
     add_test(NAME history COMMAND history test_cal.log --output test_history.root --list)
-    add_test(NAME text_files COMMAND histograms_1d_text test_1d.root)
+    add_test(NAME text_files_single_column COMMAND histograms_1d_text test_1d.root --suffix single_column)
+    add_test(NAME text_files_two_column COMMAND histograms_1d_text test_1d.root --separator " " --suffix two_column)
 endif(BUILD_TESTS)
 
 configure_file(include/io/split_tree.hpp.in include/io/split_tree.hpp)
