--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,19 @@
+#     This file is part of carolina.
+#
+#    carolina is free software: you can redistribute it and/or modify it under the terms of 
+#    the GNU General Public License as published by the Free Software Foundation, 
+#    either version 3 of the License, or (at your option) any later version.
+#
+#    carolina is distributed in the hope that it will be useful, but WITHOUT ANY 
+#    WARRANTY; without even the implied warranty of MERCHANTABILITY or 
+#    FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for 
+#    more details.
+#
+#    You should have received a copy of the GNU General Public License along with 
+#    carolina. If not, see <https://www.gnu.org/licenses/>.
+
 cmake_minimum_required(VERSION 3.10)
-project(carolina VERSION 0.2.0)
+project(carolina VERSION 0.1.0)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
