Possibility to skip creating a calibrated tree
- Since there always seem to be issues with calibrate_tree (larger file sizes, high memory usage), a new option was introduced for histograms_1d to calibrate and histogram the data at the same time.
- Added test for the new option.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ if(BUILD_TESTS)
     add_test(NAME create_raw_histograms COMMAND histograms_1d_raw test_part.log --output test_raw.root --list)
     add_test(NAME calibrate_test_data COMMAND calibrate_tree test_part.log --output test_cal.root --log --list --block 100)
     add_test(NAME create_1d_histograms COMMAND histograms_1d test_cal.log --output test_1d.root --list)
+    add_test(NAME calibrate_and_create_1d_histograms COMMAND histograms_1d test.root --output test_1d_cal.root --calibrate)
     add_test(NAME create_2d_histograms COMMAND histograms_2d test_cal.log --output test_2d.root --list)
     add_test(NAME time_calibration COMMAND energy_vs_time test_cal.log --output test_et.root --rebin_energy 32 --list)
     add_test(NAME history COMMAND history test_cal.log --output test_history.root --list)
