Test output of histograms_1d_raw
- Implement script that reads the ROOT output file and checks the content of the histograms.
- Move parameters and some methods of sampler into header to be able to include them in other files.
- New method in Analysis class to calculate total number of channels.
- Use of pseudorandom number in sampling script is optional now. For testing, deterministic version should be used for easier comparison.
- Use different random number for the two detectors in a coincident event.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ if(BUILD_TESTS)
     add_test(NAME sample_test_data COMMAND sampler --output test.root --n 100)
     add_test(NAME split_test_data COMMAND split_tree test.root --output test_part --n 4 --log)
     add_test(NAME create_raw_histograms COMMAND histograms_1d_raw test_part.log --output test_raw.root --list)
+    add_test(NAME test_raw_histograms COMMAND test_histograms_1d_raw test_raw.root --n 100)
     add_test(NAME calibrate_test_data COMMAND calibrate_tree test_part.log --output test_cal.root --log --list --block 100)
     add_test(NAME create_1d_histograms COMMAND histograms_1d test_cal.log --output test_1d.root --list)
     add_test(NAME calibrate_and_create_1d_histograms COMMAND histograms_1d test.root --output test_1d_cal.root --calibrate)
@@ -63,3 +64,4 @@ configure_file(include/programs/histograms_1d_raw.hpp.in include/programs/histog
 configure_file(include/programs/histograms_2d.hpp.in include/programs/histograms_2d.hpp)
 configure_file(include/programs/history.hpp.in include/programs/history.hpp)
 configure_file(include/test/sampler.hpp.in include/test/sampler.hpp)
+configure_file(include/test/test_histograms_1d_raw.hpp.in include/test/test_histograms_1d_raw.hpp)
