--- a/source/test/CMakeLists.txt
+++ b/source/test/CMakeLists.txt
@@ -31,3 +31,7 @@ target_link_libraries(test_tfile_utilities tfile_utilities)
 
 add_executable(test_polynomial test_polynomial.cpp)
 target_link_libraries(test_polynomial polynomial)
+
+add_executable(test_histograms_1d_raw test_histograms_1d_raw.cpp)
+target_include_directories(test_histograms_1d_raw PUBLIC ${CMAKE_BINARY_DIR}/include/test)
+target_link_libraries(test_histograms_1d_raw analysis ${Boost_LIBRARIES} counter_detector counter_detector_channel digitizer_module energy_sensitive_detector energy_sensitive_detector_channel mdpp16 ${ROOT_LIBRARIES} sis3316 v830)
