--- a/include/test/sampler.hpp.in
+++ b/include/test/sampler.hpp.in
@@ -23,8 +23,9 @@ using std::dynamic_pointer_cast;
 
 #include "inverse_calibration.hpp"
 
-const double gamma_energy(1000.), background_gamma_energy(300.),
-    counter_increment(1000.), gamma_time(20.), reference_time(10.);
+const double delayed_gamma_time(25.), gamma_energy(1000.),
+    background_gamma_energy(300.), counter_increment(1000.), gamma_time(20.),
+    reference_time(10.);
 
 TGraph invert_energy_calibration(const size_t n_detector,
                                  const size_t n_channel) {
