Variables for background-time distribution

--- a/include/test/sampler.hpp.in
+++ b/include/test/sampler.hpp.in
@@ -26,6 +26,9 @@ using std::dynamic_pointer_cast;
 const double delayed_gamma_time(25.), gamma_energy(1000.),
     background_gamma_energy(300.), counter_increment(1000.), gamma_time(20.),
     reference_time(10.);
+const pair<double, double> background_gamma_time_range_min_max = {-100., 100.};
+const pair<double, double> background_gamma_time_excluded_range_min_max = {10.,
+                                                                           30.};
 
 TGraph invert_energy_calibration(const size_t n_detector,
                                  const size_t n_channel) {
